# server/models/UserModel.js
@@ -1,21 +1,24 @@
-function User(username, passwordHash, attributes, lastLogin, isActive, rev){
+function User(username, password, attributes, lastLogin, isActive){
 
 	const USERNAME = "username";
-	const PWHASH = "passwordHash";
+	const PASSWORD = "password";
 	const ATTRIBUTES = "attributes";
 	const LASTLOGIN = "lastLogin";
 	const ISACTIVE = "isActive";
 
 	this[USERNAME] = username;
-	this[PWHASH] = passwordHash;
+	this[PASSWORD] = password;
 	this[ATTRIBUTES] = attributes;
 	this[LASTLOGIN] = lastLogin;
 	this[ISACTIVE] = isActive;
 
+	if (typeof(this[ISACTIVE]) =="undefined")
+		this[ISACTIVE] = true;
+
 	this.toJSON = function(){
 		var obj = {};
 		obj[USERNAME] = this[USERNAME];
-		obj[PWHASH] = this[PWHASH];
+		obj[PASSWORD] = this[PASSWORD];
 		obj[ATTRIBUTES] = this[ATTRIBUTES];
 		obj[LASTLOGIN] = this[LASTLOGIN];
 		obj[ISACTIVE] = this[ISACTIVE];
@@ -24,17 +27,18 @@ function User(username, passwordHash, attributes, lastLogin, isActive, rev){
 
 	this.toSafeJSON = function(){
 		var json = this.toJSON();
-		json[PWHASH] = "******";
+		delete json[PASSWORD];
 		return json;
 	}
 }
 
 User.fromJSON = function(json){
+
 	return new User(
 		json.username,
-		json.passwordHash,
-		json.attributes,
-		json.lastLogin,
+		json.password,
+		json.attributes || {},
+		json.lastLogin || "Not available",
 		json.isActive
 	);
 }
